--- a/PythonClub/Project1/templates/base.html
+++ b/PythonClub/Project1/templates/base.html
@@ -18,8 +18,8 @@
                 <a class="navbar-brand" href="{% url 'index' %}">Tech Reviews</a>
                 </div>
                 <ul class="nav navbar-nav">
-                   
-               
+                    <li><a href="{% url 'types' %}">Meetings</a></li>
+                    <li><a href="{% url 'types' %}">Resources</a></li>
                 </ul>
                 </div>
                 </nav>
