--- a/PythonClub/Project1/templates/Project1/index.html
+++ b/PythonClub/Project1/templates/Project1/index.html
@@ -2,7 +2,7 @@
 {% block content %}
 <!--This is a comment-->
 
-<h2>Tech Reviews</h2>
+<h2>World Convention</h2>
 <p>Welcome to the site that
     reviews everything tech
 </p>
