--- a/PythonClub/Project1/templates/Project1/resources.html
+++ b/PythonClub/Project1/templates/Project1/resources.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Meeting</h1>
+<h1>Resources</h1>
 <table class='table'>
  <tr>
      <th>Resource Name</th>
@@ -12,7 +12,7 @@
  </tr>
  {% for t in type_list %}
    <tr>
-       <td>{{ t.ResourceName }}</td>
+       <td>{{ t.ResourceName }}</tdwidth="20%">
        <td>{{ t.ResourceURL }}</td>
        <td>{{ t.ResourceType }}</td>
        <td>{{ t.DateEntered }}</td>
